--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,15 +1,15 @@
 {% load i18n %}{% load url from future %}{% autoescape off %}
-{% blocktrans %}You're receiving this e-mail because you requested a password reset for your user account at St George's University Online.{% endblocktrans %}
+{% blocktrans with site_name=site_name %}You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.{% endblocktrans %}
 
 {% trans "Please go to the following page and choose a new password:" %}
 {% block reset_link %}
-https://{{domain}}{% url 'student.views.password_reset_confirm_wrapper' uidb36=uid token=token %}
+http{% if is_secure %}{% endif %}://{{domain}}{% url 'student.views.password_reset_confirm_wrapper' uidb36=uid token=token %}
 {% endblock %}
 
-If you didn't request this change, you can disregard this email - we have not yet reset your password.
+{% trans "If you didn't request this change, you can disregard this email - we have not yet reset your password." %}
 
 {% trans "Thanks for using our site!" %}
 
-{% blocktrans %}The St. George's University Online Team{% endblocktrans %}
+{% blocktrans with platform_name=platform_name %}The {{ platform_name }} Team{% endblocktrans %}
 
 {% endautoescape %}
