SGU specific changes

--- a/static/sass/_sgu.scss
+++ b/static/sass/_sgu.scss
@@ -20,6 +20,10 @@ $beige: #9d9573;
 $beige-60: lighten($beige, 18.5%); //Main Border/HR Color
 $beige-25: lighten($beige, 25%); 
 
+//Header bottom border:
+$courseware-border-bottom-color: #E9E6DF;
+$courseware-navigation-color: #8c1515;
+
 //Sandstone Color Variables
 $sandstone: #ddcf99;
 $sandstone-50: lighten($sandstone, 9%);
