--- a/templates/static_templates/theme-about.html
+++ b/templates/static_templates/theme-about.html
@@ -93,10 +93,10 @@
       <article id="stanford-OpenEdX-contact">
         <h2>Additional Contact Information</h2>
         <p><strong>For general information email us at:</strong><br />
-        <a href="mailto:msapcourse@gmail.com">msapcourse@gmail.com</a></p>
+        <a href="mailto:onlinesgu@gmail.com">onlinesgu@gmail.com</a></p>
 
         <p><strong>For disability-related questions email us at:</strong><br />
-        <a href="mailto:msapcourse@gmail.com">msapcourse@gmail.com</a></p>
+        <a href="mailto:onlinesgu@gmail.com">onlinesgu@gmail.com</a></p>
         <p>&nbsp;</p>
       </article>
       <script>
