--- a/templates/theme-footer.html
+++ b/templates/theme-footer.html
@@ -42,7 +42,8 @@
           <li class="search-stanford"><a href="http://www.stanford.edu/search/">Search Stanford</a></li>
           <li class="terms alt"><a href="http://www.stanford.edu/site/terms.html">Terms of Use</a></li>
           <li class="copyright"><a href="http://www.stanford.edu/site/copyright.html">Copyright Complaints</a></li>-->
-        </ul>
+        	<li style="font-size: 13px;">Built on <a href="http://code.edx.org">OpenEdX</a></li>
+	</ul>
         <div class="clear"></div>
         <p class="copyright vcard">&copy; <span class="fn org">St. George's University</span>, <span class="adr"> <span class="locality">True Blue</span>, <span class="region">Grenada</span> <span class="postal-code"></span> </span></p>
       </div>
