--- a/templates/theme-header.html
+++ b/templates/theme-header.html
@@ -8,7 +8,7 @@
   <div id="su-header">
     <div class="su-container">
       <a href="http://www.sgu.edu">
-        <img src="https://dl.dropboxusercontent.com/u/54124480/resgulogos/SGU%20Logo%20Horizontal.png" alt="St. George's University" width="152" height="23">
+        <img src="https://dl.dropboxusercontent.com/u/54124480/resgulogos/SGU%20Logo%20Horizontal.png" alt="St. George's University" width="115" height="23">
       </a>
     </div>
   </div>
@@ -16,7 +16,7 @@
 
 ## TODO: this will eventually be moved to the Sass
 <%block name="navigation_logo">
-  <img src="${static.url('themes/stanford/images/sgu-spot-logo.png')}" height="35" alt="Home Page" />
+  <img src="${static.url('themes/sgu/images/SGU_H_sized.png')}" alt="Home Page" />
 </%block>
 
 ## We don't want extra links inside the navigation dropdown
