--- a/templates/courseware/courses.html
+++ b/templates/courseware/courses.html
@@ -15,7 +15,7 @@
   # of this template goes wonky
 
   logo_file = microsite.get_value(
-    'course_index_overlay_logo_file', settings.STATIC_URL + 'themes/sgu/images/sgu-spot-logo.png')
+    'course_index_overlay_logo_file', settings.STATIC_URL + 'themes/sgu/images/SGU_V_sized.png')
 %>
 
   <header class="search">
@@ -23,7 +23,7 @@
       <hgroup>
         <div class="logo">
           % if self.stanford_theme_enabled():
-            <img src="${static.url('themes/stanford/images/seal.png')}" alt="Stanford Seal Logo" />
+            <img src="${static.url('themes/sgu/images/SGU_V_sized.png')}" alt="St. George's University Logo" />
           % else:
             <img src='${logo_file}' alt="${microsite.get_value('platform_name', settings.PLATFORM_NAME)} Logo" />
           % endif
