--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,9 @@
             % if self.stanford_theme_enabled():
               <h1>${_("Free courses from <strong>{university_name}</strong>").format(university_name="Stanford")}</h1>
             % else:
-              <h1>${_("Free courses from <strong>SGU Online</strong>")}</h1>
+              <h1>${_("Free online courses from </br><strong>St. George's University</strong>")}</h1>
             % endif
-            <h2>${_("For anyone, anywhere, anytime")}</h2>
+            <h2>${_("  ")}</h2>
           % endif
         </hgroup>
 
